Minor footer content update

--- a/footer.html
+++ b/footer.html
@@ -22,6 +22,7 @@
                     <li><a href="https://www.linkedin.com/in/wilsonchangjy" target="_blank">LinkedIn</a></li>
                     <li><a href="https://github.com/wilsonchangjy" target="_blank">GitHub</a></li>
                     <li><a href="https://medium.com/@wilsonchangjy" target="_blank">Medium</a></li>
+                    <li><a href="https://lu.ma/user/wilsonchangjy" target="_blank">Luma</a></li>
                 </ul>
             </div>
         </div>
