Minor content updates

--- a/okx-growth.html
+++ b/okx-growth.html
@@ -50,7 +50,7 @@
                     <p>
                         Attained 100K clicks in daily traffic on the OKX website, by establishing new webpages and features that correspond most to users’ search intents and continuous optimisation through research.
                         <br><br>
-                        Increased the market share for Price pages of trending tokens by 1425% and therefore frequently ranked #1 on Google search results, through revamping designs to become scalable and configurable while ensuring content provided to users is relevant and valuable.
+                        Increased the market share for Price pages of trending and DEX tokens by 1425% and therefore frequently ranked #1 on Google search results, through revamping designs to become scalable and configurable while ensuring content provided to users is relevant and valuable.
                     </p>
                 </div>
             </div>
