--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
                                 <h5>Product Designer</h5>
                                 <h5 class="light contrast">OKX</h5>
                             </div>
-                            <p class="caption">Increased the market share for Price pages of trending tokens by 1425% and therefore frequently ranked #1 on Google search results, through revamping designs to become scalable and configurable while ensuring content provided to users is relevant and valuable.</p>
+                            <p class="caption">Increased the market share for Price pages of trending and DEX tokens by 1425% and therefore frequently ranked #1 on Google search results, through revamping designs to become scalable and configurable while ensuring content provided to users is relevant and valuable.</p>
                             <br>
                             <p class="caption">Attained 100K clicks in daily traffic on the website, by establishing new webpages and features that correspond most to users' search intents and continuous optimisation through research.</p>
                             <br>
