Updated project descriptions

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     <a href="tairot.html" class="card">
                         <img src="resources/images/tairot.jpg" class="bottom-8">
                         <h5 class="primary bottom-4">tAIrot</h5>
-                        <p class="caption">Creative Design, Full Stack Development</p>
+                        <p class="caption">Interaction Design, Full Stack Development</p>
                     </a>
                     <a href="new-balance.html" class="card">
                         <img src="resources/images/newbalance.jpg" class="bottom-8">
