--- a/okx-growth.html
+++ b/okx-growth.html
@@ -46,11 +46,10 @@
                 <span class="column"></span>
                 <div class="column gap-32">
                     <h3>Organic Traffic</h3>
-                    <img src="/resources/images/okxgrowth3.jpg">
                     <p>
                         Attained 100K clicks in daily traffic on the OKX website, by establishing new webpages and features that correspond most to users’ search intents and continuous optimisation through research.
                         <br><br>
-                        Increased the market share for Price pages of trending and DEX tokens by 1425% and therefore frequently ranked #1 on Google search results, through revamping designs to become scalable and configurable while ensuring content provided to users is relevant and valuable.
+                        Increased the average engagement rate of the Price page by 22.6%, and grew new user acquisition by 24% through revamping designs to become scalable and configurable while ensuring content provided to users is relevant and valuable.
                     </p>
                 </div>
             </div>
