--- a/tairot.html
+++ b/tairot.html
@@ -21,7 +21,7 @@
                 <h1 class="medium">tAIrot</h1>
                 <div>
                     <div class="row">
-                        <h5>Creative Design, Full Stack Development</h5>
+                        <h5>Interaction Design, Full Stack Development</h5>
                         <h5 class="secondary">Aug 2023</h5>
                     </div>
                     <a href="https://tairot.app" target="_blank" class="row center-align"><h5 class="primary underline">tairot.app</h5><img src="/resources/icons/link.svg" id="link"></a>
