Minor content updates

--- a/about.html
+++ b/about.html
@@ -38,9 +38,7 @@
                                 <h5>Product Designer</h5>
                                 <h5 class="light contrast">OKX</h5>
                             </div>
-                            <p class="caption">Attained 100K clicks in daily traffic on the website, by establishing new webpages and features that correspond most to users' search intents and continuous optimisation through research.</p>
-                            <br>
-                            <p class="caption">Increased the rate of users completing a Share by 56%, through a complete overhaul and redesigning legacy components and content which made data visualisation simplified, clean and less complex.</p>
+                            <p class="caption">Contributing to the Growth team, the primary directive was to create engagement with the crypto-curious and empower them through understanding to take their first step towards the future of money, while providing confidence and trust through consistency and transparency.</p>
                             <br>
                             <p class="caption">Spearheaded and established collaboration with Singapore Product Design, in order to increase the influence and bring exposure to the design philosophy of OKX within the local design community.</p>
                         </div>
@@ -52,11 +50,9 @@
                                 <h5>UI/UX Designer, Intern</h5>
                                 <h5 class="light contrast">GovTech</h5>
                             </div>
-                            <p class="caption">Worked on a variety of citizen-related projects under the LifeSG Design team. Designed screens for various platforms, adhering closely to the robust design system.</p>    
+                            <p class="caption">Worked on a variety of citizen-related projects under the LifeSG Design team, connecting Singaporeans with public services through all matters.</p>
                             <br>
-                            <p class="caption">Planned and facilitated user surveys and interviews for research studies in both main and assisting roles. Conducted discovery and market research, and synthesised results into valuable key insights for study reports.</p>    
-                            <br>
-                            <p class="caption">Assisted with planning a design workshop involving multiple government agencies for a proof-of-concept project as part of a major overhaul.</p>
+                            <p class="caption">Planned and facilitated user surveys and interviews for research studies in both main and assisting roles. Conducted discovery and market research, and synthesised results into valuable key insights for study reports for a major long-term project.</p>
                         </div>
                         <p class="caption">May 2022 – Aug 2022</p>
                     </div>
@@ -66,9 +62,6 @@
                                 <h5>Web & UI/UX Designer, Intern</h5>
                                 <h5 class="light contrast">Oangle</h5>
                             </div>
-                            <p class="caption">Designed, wireframed and built websites, applications for various devices and screens. Also designed and produced graphic collateral for clients. Revamped the design of Oangle's collaterals, such as name cards in accordance with the new v6 branding.</p>    
-                            <br>
-                            <p class="caption">Engaged in a total of 29 projects, with tasks of various complexities. Directly in-charge of 4 main client projects, additionally undertaking the responsibility of project manager.</p>    
                         </div>
                         <p class="caption">Aug 2021 – Feb 2022</p>
                     </div>
