--- a/okx-growth.html
+++ b/okx-growth.html
@@ -28,7 +28,7 @@
             <div class="row gap-12">
                 <span class="column gap-12"></span>
                 <div class="column gap-32">
-                    <h5>Focused on products that drive user growth and engagement, my contributions include establishing new avenues of online traffic, optimising core engagement flows, pioneering 0-to-1 initiatives in collaboration with other product teams, as well as building internal tools for managing reward and gift systems.</h5>
+                    <h5>Focused on products that drive user growth and engagement, my contributions include establishing new avenues of online traffic, optimising core engagement flows, pioneering 0-to-1 initiatives in collaboration with other product teams, as well as building internal tools for managing reward, gift and campaign systems.</h5>
                     <h5 class="secondary">Further details withheld due to prevailing non-disclosures, please request for a private discussion.</h5>
                 </div>
             </div>
@@ -37,9 +37,11 @@
                 <div class="column gap-32">
                     <h3>User Engagement</h3>
                     <img src="/resources/images/okxgrowth2.jpg">
-                    <p>Increased the rate of users completing a Share by 56%, by overhauling and redesigning legacy components and content which made data visualisation simplified, clean and less complex.
-                    <br><br>
-                    Optimised the Home screen across different markets through redesigning modules and interactions, resulting in an increase of the exposure to click-through rate by 69.8% across A/B tests.</p>
+                    <p>
+                        Contributed on projects that set out to create engagement with the crypto-curious and empower them through understanding to take their first step towards the future of money, while providing confidence and trust through consistency and transparency.
+                        <br><br>
+                        Produced a consistent growth in Share activity according to the number of monthly active users, resulting in an increase of new user sign ups via referrals across H1 2025.
+                    </p>
                 </div>
             </div>
             <div class="row gap-12">
@@ -47,9 +49,9 @@
                 <div class="column gap-32">
                     <h3>Organic Traffic</h3>
                     <p>
-                        Attained 100K clicks in daily traffic on the OKX website, by establishing new webpages and features that correspond most to users’ search intents and continuous optimisation through research.
+                        Increased the average engagement rate of the Price page, and grew new user acquisition through revamping designs to become scalable and configurable while ensuring content provided to users is relevant and valuable.
                         <br><br>
-                        Increased the average engagement rate of the Price page by 22.6%, and grew new user acquisition by 24% through revamping designs to become scalable and configurable while ensuring content provided to users is relevant and valuable.
+                        Established a components and patterns library in collaboration with the front-end team to quickly configure and build pages based on trending search intents to capture organic traffic.
                     </p>
                 </div>
             </div>
