Minor content update

--- a/about.html
+++ b/about.html
@@ -58,7 +58,7 @@
                     </div>
                     <div class="list-item grid">
                         <div>
-                            <div class="row bottom-8">
+                            <div class="row">
                                 <h5>Web & UI/UX Designer, Intern</h5>
                                 <h5 class="light contrast">Oangle</h5>
                             </div>
